   contents, and changed the docs so that we encourage the user to use
   the MANIFEST.SKIP.  [Ron Savage]

 - Eliminated a redundant recipe from the Cookbook, now that there are
   some more extensive recipes on how to add stuff to the
   build/install sequences.

 - Eliminated an undefined-variable warning when testing under perl 5.005

 - Have script_files default to everything in bin.  I believe this is
   the least surprising behavior. [Suggested by Michael Schwern]

 - If script_files is given a directory, consider each file in that
   directory tree as a script to be installed.  This avoids having to
   remember to add to the script_files list every time you add a
   program. [Suggested by Michael Schwern]

 - We now only load Pod::Man when we actually need to build man pages.

 - We now make Test::Harness use our carefully-selected path to a perl
   executable regardless of Test::Harness's version.  Previously we
   let it figure stuff out for itself if it was a reasonably modern
   version, but it's safer to make sure we're using the same perl
   everywhere.

 - When the user is using the 'install_base' option, scripts will now
   be installed by default in $install_base/bin/ rather than
   $install_base/script/ . [Jan Hudec and Michael Schwern]

0.2605

 - Fixed a bug in which zero-length arguments for hash-valued
   parameters (e.g. " --config foo= ") weren't being allowed.

 - The tests now play better with environments in which version.pm is
   pre-loaded, like in bleadperl. [John Peacock & Michael Schwern]

0.2604  Wed Nov 17 14:32:42 CST 2004

 - Fixed a split_like_shell() bug introduced in 0.2603 for Windows, in
   which an array reference passed as an argument was returned as an
   array reference, rather than as a list. [Spotted by Steve Hay]

 - module_name() will now return '' instead of undef when module_name
   is not set.  This eliminates a couple uninitialized-value
   warnings. [Suggested by Michael Schwern]
